Employer chart changes and reduce space between remote and remote option field

--- a/frontend/src/app/modules/features/employer/employee-chart/employee-chart.component.html
+++ b/frontend/src/app/modules/features/employer/employee-chart/employee-chart.component.html
@@ -318,7 +318,7 @@
 							<div>Applications</div>
 							<div class="mt-1">
 								<select class="form-control form-control-td" (change)="selectJob($event.target.value)">
-								  <option selected="" disabled>Select</option>
+								  <option selected="" value="0">All</option>
 								  <option [value]="i | json" *ngFor="let i of chartDetails">{{i.title}}</option>
 								</select>
 							</div>
