--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
@@ -189,7 +189,7 @@
 			</div>
 			<app-control-messages [control]="f['remote']"></app-control-messages>
 		</div>
-		<div class="col-lg-4 col-md-6" *ngIf="showRemoteOption">
+		<div class="col-lg-4 col-md-6" *ngIf="showRemoteOption" style="margin-left:-12rem;">
 		<div class=" form-group">
 				<label>{{"jobs.remoteOption" | translate}}
 				</label>
