--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-footer/create-candidate-footer.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-footer/create-candidate-footer.component.html
@@ -29,7 +29,7 @@
 	</div>
 	<div class="col-lg-2 col-md-6" *ngIf="((currentTabInfo.tabNumber != 4) && userInfo?.profile_completed)">
 		<div class="form-group">
-			<button [disabled]="(!createCandidateForm.valid && !userInfo?.profile_completed)" (click)="onToggleRegisterReview(true)" type="button"
+			<button [disabled]="(!createCandidateForm.valid || !userInfo?.profile_completed)" (click)="onToggleRegisterReview(true)" type="button"
 				class="btn btn-theme-blue btn-block btn-lg btnNext">
 				{{"shared.update" | translate }}
 			</button>
